<resources>

    <!--    countries-->
    <string name="app_name">Aston Views Homework</string>
    <string name="austria">austria</string>
    <string name="poland">poland</string>
    <string name="italy">italy</string>
    <string name="colombia">colombia</string>
    <string name="madagascar">madagascar</string>
    <string name="thailand">thailand</string>
    <string name="denmark">denmark</string>
    <string name="switzerland">switzerland</string>

    <!--    headers-->
    <string name="task1">task 1</string>
    <string name="task2">task 2</string>

    <!--    other-->
    <string name="swipe">swipe</string>
    <string name="edittext_hint">Enter url here…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aston">aston</string>
    <string name="title">views</string>
    <string name="done_by">done by\ndanil stalmakov\nfor aston</string>
    <string name="download_via">download via</string>
    <string name="glide">glide</string>
    <string name="inputstream">input\nStream</string>
</resources>
