<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header"
        style="@style/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:scaleType="centerCrop"
        android:src="@drawable/blue_or_red"
        android:background="@color/black"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_url"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/edittext_hint"
        app:layout_constraintBottom_toTopOf="@+id/textview_download_via"
        app:layout_constraintEnd_toEndOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/textview_download_via"
        style="@style/text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_via"
        app:layout_constraintBottom_toTopOf="@+id/button_inputStream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_url" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_glide"
        style="@style/download_buttons"
        android:layout_height="0dp"
        android:backgroundTint="@color/blue"
        android:text="@string/glide"
        app:layout_constraintBottom_toBottomOf="@id/button_inputStream"
        app:layout_constraintEnd_toStartOf="@id/button_inputStream"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/edittext_url"
        app:layout_constraintTop_toTopOf="@id/button_inputStream" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_inputStream"
        style="@style/download_buttons"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/inputstream"
        app:layout_constraintBottom_toTopOf="@id/textview_swipe"
        app:layout_constraintEnd_toEndOf="@+id/edittext_url"
        app:layout_constraintStart_toEndOf="@id/button_glide"
        app:layout_constraintTop_toBottomOf="@+id/textview_download_via" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_swipe"
        style="@style/text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe"
        app:layout_constraintBottom_toTopOf="@id/imageview_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageview_arrow_back"
        style="@style/arrow"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>